<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_carrito"
        android:icon="@drawable/carrito_compras"
        android:orderInCategory="1"
        android:title="@string/action_carrito"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/busqueda"
        android:orderInCategory="1"
        android:title="@string/action_search"
        app:showAsAction="ifRoom" />
</menu>
